# stator

./: .gitignore  Cargo.toml  LICENSE  PRIVATE_METHOD_ANALYSIS.md  README.md  RUNTIME_CONFORMANCE_ANALYSIS.md  TEST262_ANALYSIS.txt  TEST262_DEBUG_GUIDE.txt  TEST262_QUICK_REFERENCE.txt  analyze_benchmarks.rs  apply_ic.py  apply_json_changes.py  apply_mod_changes.py  apply_nanbox_acc.py  check_date.py  check_ig.py  codecov.yml  ic_changes.patch  rust-toolchain.toml  test_bytecode.rs  test_closure.js  test_closure_bytecode.rs  test_closure_counter.js  test_create.js  test_instanceof.js  test_loop.js  test_loop_bytecode.js  test_object_creation_bc.rs  test_radix.js  test_switch_case.js  test_writable.js
chromium/: BUILD.gn  stator_bridge.cc
chromium/content/: BUILD.gn  stator_dual_engine.cc  stator_dual_engine.h  stator_engine_selector.cc  stator_engine_selector.h
chromium/features/: BUILD.gn  stator_features.cc  stator_features.h
chromium/gin/: BUILD.gn  gin_js_engine_test.cc
crates/st8/: Cargo.toml  README.md
crates/st8/src/: main.rs
crates/stator_core/: Cargo.toml
crates/stator_core/benches/: engine_benchmarks.rs  precompiled_benchmarks.rs
crates/stator_core/examples/: analyze_benchmarks.rs  size_check.rs
crates/stator_core/src/: error.rs  lib.rs  platform.rs
crates/stator_core/src/builtins/: array.rs  async_generator.rs  date.rs  error.rs  finalization_registry.rs  function.rs  global.rs  install_globals.rs  intl.rs  iterator.rs  json.rs  map.rs  math.rs  mod.rs  number.rs  object.rs  promise.rs  proxy.rs  proxy_reflect.rs  reflect.rs  regexp.rs  set.rs  string.rs  symbol.rs  typed_array.rs  util.rs  wasm.rs  weak_map.rs  weak_ref.rs  weak_set.rs
crates/stator_core/src/bytecode/: bytecode_array.rs  bytecode_generator.rs  bytecodes.rs  feedback.rs  mod.rs  peephole.rs  register.rs  source_positions.rs  test_arithmetic_loop.rs
crates/stator_core/src/compiler/: background.rs  mod.rs  osr.rs
crates/stator_core/src/dom/: mod.rs
crates/stator_core/src/event_loop/: mod.rs
crates/stator_core/src/ffi/: mod.rs
crates/stator_core/src/gc/: handle.rs  heap.rs  immix.rs  incremental.rs  mark_sweep_compact.rs  mod.rs  runtime.rs  scavenger.rs  trace.rs  write_barrier.rs
crates/stator_core/src/ic/: mod.rs
crates/stator_core/src/inspector/: cdp.rs  console.rs  debugger.rs  heap_snapshot.rs  mod.rs  profiler.rs
crates/stator_core/src/interpreter/: cross_cutting_conformance_tests.rs  dispatch.rs  dynamic_import_conformance_tests.rs  map_set_conformance_tests.rs  mod.rs  numeric_conformance_tests.rs  regexp_conformance_tests.rs  temporal_conformance_tests.rs
crates/stator_core/src/objects/: heap_object.rs  js_array.rs  js_function.rs  js_object.rs  js_string.rs  map.rs  mod.rs  nan_boxing.rs  nanbox.rs  plain_object_storage.rs  property_descriptor.rs  property_map.rs  regexp.rs  shapes.rs  string.rs  string_intern.rs  tagged.rs  value.rs
crates/stator_core/src/parser/: ast.rs  mod.rs  preparser.rs  recursive_descent.rs  scanner.rs  scope.rs
crates/stator_core/src/sandbox/: mod.rs
crates/stator_core/src/snapshot/: mod.rs
crates/stator_core/src/wasm/: mod.rs
crates/stator_core/src/zone/: mod.rs
crates/stator_ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/stator_ffi/include/: stator.h  v8_compat.h
crates/stator_ffi/src/: code_cache_key.rs  lib.rs  native_code_cache.rs
crates/stator_ffi/tests/: abi_contract.rs  abi_symbols.baseline.txt  release_manifest.rs
crates/stator_jse/: Cargo.toml  LICENSE-MIT  README.md  build.rs
crates/stator_jse/benches/: engine_benchmarks.rs  precompiled_benchmarks.rs
crates/stator_jse/examples/: size_check.rs
crates/stator_jse/src/: error.rs  executable_memory.rs  host.rs  jit_mitigations.rs  jit_unwind.rs  lib.rs  platform.rs
crates/stator_jse/src/builtins/: array.rs  array_typed_array_alignment.rs  date.rs  error.rs  finalization_registry.rs  function.rs  global.rs  headers.rs  install_globals.rs  intl.rs  iterator.rs  json.rs  map.rs  mod.rs  number.rs  object.rs  promise.rs  proxy.rs  proxy_reflect.rs  reflect.rs  regexp.rs  set.rs  string.rs  symbol.rs  temporal.rs  typed_array.rs  url.rs  url_pattern.rs  util.rs  wasm.rs  weak_map.rs  weak_ref.rs
crates/stator_jse/src/bytecode/: bytecode_array.rs  bytecode_generator.rs  bytecodes.rs  feedback.rs  mod.rs  peephole.rs  source_positions.rs
crates/stator_jse/src/compiler/: abi_x64.rs  compile_counters.rs  deopt_counters.rs  jit_memory.rs  mod.rs  osr_counters.rs  tier_latency.rs
crates/stator_jse/src/dom/: mod.rs
crates/stator_jse/src/event_loop/: mod.rs
crates/stator_jse/src/ffi/: mod.rs
crates/stator_jse/src/gc/: gc_ptr.rs  handle.rs  mod.rs  (+7 more)
crates/stator_test262/: Cargo.toml
crates/stator_test262/src/: main.rs
examples/chromium_bench/: CMakeLists.txt
examples/chromium_bench/src/: main.cpp
examples/mini_browser/: CMakeLists.txt  README.md  mini_browser
examples/mini_browser/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/mini_browser/include/: stator.h  v8_compat.h
examples/mini_browser/src/: main.cpp
examples/v8_compat_demo/: CMakeLists.txt
examples/v8_compat_demo/src/: main.cpp
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/corpus/: .gitignore
fuzz/corpus/fuzz_parser/: seed_comment.js
fuzz/corpus/fuzz_parser_utf8/: seed_arrow.js  seed_for_loop.js  seed_function.js  seed_if_else.js  seed_strict.js  seed_try_catch.js
fuzz/corpus/fuzz_scanner/: seed_string.js  seed_template.js
fuzz/corpus/fuzz_tagged_value/: seed_heap_high
fuzz/fuzz_targets/: fuzz_baseline_compile.rs  fuzz_builtins_array.rs  fuzz_builtins_string.rs  fuzz_bytecode_compiler.rs  fuzz_bytecode_roundtrip.rs  fuzz_deopt.rs  fuzz_eval.rs  fuzz_ffi_isolate.rs  fuzz_ffi_objects.rs  fuzz_ffi_scripts.rs  fuzz_ffi_sequence.rs  fuzz_ffi_values.rs  fuzz_gc_stress.rs  fuzz_handle_scope.rs  fuzz_heap_alloc.rs  fuzz_interpreter.rs  fuzz_jit_correctness.rs  fuzz_json_parse.rs  fuzz_parser.rs  fuzz_parser_utf8.rs  fuzz_property_ops.rs  fuzz_regexp.rs  fuzz_scanner.rs  fuzz_snapshot_load.rs  fuzz_tagged_value.rs
fuzz/src/: lib.rs
(+170 files in other folders)
