[workspace]
members = [
    "crates/stator_core",
    "crates/stator_ffi",
    "crates/stator_test262",
    "crates/st8",
]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[workspace.dependencies]
stator_core = { path = "crates/stator_core" }
bumpalo = "3.20.2"
log = "0.4.29"
env_logger = "0.11.9"
bitflags = "2.11.0"
smallvec = "1.15.1"
parking_lot = "0.12.5"
thiserror = "2.0.18"
regress = "0.10.5"
libc = "0.2"
criterion = { version = "0.8.2", features = ["html_reports"] }
cranelift-codegen = { version = "0.129.1", features = ["default"] }
cranelift-frontend = "0.129.1"
cranelift-jit = "0.129.1"
cranelift-module = "0.129.1"
