[package]
name = "stator-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
stator_js = { path = "../crates/stator_core" }
stator_js_ffi = { path = "../crates/stator_ffi" }

[[bin]]
name = "fuzz_tagged_value"
path = "fuzz_targets/fuzz_tagged_value.rs"
test = false
doc = false

[[bin]]
name = "fuzz_heap_alloc"
path = "fuzz_targets/fuzz_heap_alloc.rs"
test = false
doc = false

[[bin]]
name = "fuzz_handle_scope"
path = "fuzz_targets/fuzz_handle_scope.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gc_stress"
path = "fuzz_targets/fuzz_gc_stress.rs"
test = false
doc = false

[[bin]]
name = "fuzz_property_ops"
path = "fuzz_targets/fuzz_property_ops.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scanner"
path = "fuzz_targets/fuzz_scanner.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser_utf8"
path = "fuzz_targets/fuzz_parser_utf8.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bytecode_compiler"
path = "fuzz_targets/fuzz_bytecode_compiler.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bytecode_roundtrip"
path = "fuzz_targets/fuzz_bytecode_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_interpreter"
path = "fuzz_targets/fuzz_interpreter.rs"
test = false
doc = false

[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/fuzz_eval.rs"
test = false
doc = false

[[bin]]
name = "fuzz_json_parse"
path = "fuzz_targets/fuzz_json_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_regexp"
path = "fuzz_targets/fuzz_regexp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_builtins_array"
path = "fuzz_targets/fuzz_builtins_array.rs"
test = false
doc = false

[[bin]]
name = "fuzz_builtins_string"
path = "fuzz_targets/fuzz_builtins_string.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ffi_isolate"
path = "fuzz_targets/fuzz_ffi_isolate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ffi_values"
path = "fuzz_targets/fuzz_ffi_values.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ffi_objects"
path = "fuzz_targets/fuzz_ffi_objects.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ffi_scripts"
path = "fuzz_targets/fuzz_ffi_scripts.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ffi_sequence"
path = "fuzz_targets/fuzz_ffi_sequence.rs"
test = false
doc = false

[[bin]]
name = "fuzz_baseline_compile"
path = "fuzz_targets/fuzz_baseline_compile.rs"
test = false
doc = false

[[bin]]
name = "fuzz_jit_correctness"
path = "fuzz_targets/fuzz_jit_correctness.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deopt"
path = "fuzz_targets/fuzz_deopt.rs"
test = false
doc = false
