[package]
name = "stator_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[[bench]]
name = "engine_benchmarks"
harness = false

[lints]
workspace = true

[dependencies]
bumpalo.workspace = true
log.workspace = true
bitflags.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
regress.workspace = true

[target.'cfg(all(target_arch = "x86_64", unix))'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
libc = "0.2"
