[package]
name = "stator_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[[bench]]
name = "engine_benchmarks"
harness = false

[lints]
workspace = true

[dependencies]
bumpalo.workspace = true
log.workspace = true
bitflags.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
regress.workspace = true
unicode-normalization.workspace = true
serde.workspace = true
serde_json.workspace = true
stacker.workspace = true
tungstenite = { workspace = true }
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
wasmtime = "42.0.1"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
libc = "0.2"
