[package]
name = "stator_jse_ffi"
version = "0.3.4"
edition = "2024"
description = "Stator JavaScript engine — stable C FFI layer for embedding"
license = "MIT"
repository = "https://github.com/telecos/stator"
homepage = "https://github.com/telecos/stator"
readme = "README.md"
keywords = ["javascript", "engine", "ffi", "embedding"]
categories = ["compilers", "external-ffi-bindings"]
include = [
    "Cargo.toml",
    "LICENSE-MIT",
    "README.md",
    "build.rs",
    "cbindgen.toml",
    "include/**/*",
    "src/**/*",
]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
stator_jse.workspace = true
log.workspace = true

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
cbindgen = "0.29"

[lints]
workspace = true
