[package]
name = "stator_jse"
version = "0.1.0"
edition = "2024"
description = "Stator JavaScript engine core — parser, bytecode compiler, Maglev JIT, interpreter, GC"
license = "MIT"
repository = "https://github.com/telecos/stator"
homepage = "https://github.com/telecos/stator"
keywords = ["javascript", "engine", "jit", "ecmascript", "interpreter"]
categories = ["compilers", "wasm"]
readme = "../../README.md"

[lib]
crate-type = ["rlib"]

[[bench]]
name = "engine_benchmarks"
harness = false

[[bench]]
name = "precompiled_benchmarks"
harness = false

[lints]
workspace = true

[dependencies]
arrayvec = "0.7"
bumpalo.workspace = true
log.workspace = true
bitflags.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
regress.workspace = true
unicode-ident = "1.0.24"
unicode-normalization.workspace = true
serde.workspace = true
serde_json.workspace = true
stacker.workspace = true
tungstenite = { workspace = true }
num-bigint.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
wasmtime = "42.0.1"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion.workspace = true
libc = "0.2"

[features]
regalloc-trace = []
