[package]
name = "stator_test262"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stator_test262"
path = "src/main.rs"

[dependencies]
stator_core.workspace = true
env_logger.workspace = true
log.workspace = true
stacker.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
