[package]
name = "stator_jse_test262"
version = "0.1.0"
edition = "2024"
description = "ECMA-262 Test262 conformance harness for the Stator JavaScript engine"
license = "MIT"
repository = "https://github.com/telecos/stator"
publish = false

[[bin]]
name = "stator_jse_test262"
path = "src/main.rs"

[dependencies]
stator_jse.workspace = true
env_logger.workspace = true
log.workspace = true
stacker.workspace = true

[lints]
workspace = true
